2006-08-15  Eyal Alalouf  <eyala@mainsoft.com>
    * WebConfigurationSettings.cs: Remove i#if TARGET_JVM since Grasshopper
	  supports Remtoing now.

2006-07-06 Andrew Skiba <andrews@mainsoft.com>

	* HttpHandlersSectionHandler.cs: validate attribute can have 'true' and
	'false' case-insensitive in net 2.0

2006-06-28 Andrew Skiba <andrews@mainsoft.com>

	* ModulesConfiguration.cs: keep the inner exception

2006-03-19 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpRuntimeConfigurationHandler.cs: removed a bunch of useless stuff
	for 1.x.

2006-02-28  Chris Toshok  <toshok@ximian.com>

	* FormsAuthPasswordFormat.cs: ifdef out the [Serializable] in the
	2.0 case.

2006-02-10 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* CompilationConfiguration.cs:
	* CompilationConfigurationHandler.cs: only compile these for
	pre-2.0 assemblies.

2006-02-01  Chris Toshok  <toshok@ximian.com>

	* CompilerCollection.cs: CONFIGURATION_2_0 => NET_2_0.

	* CompilationConfigurationHandler.cs: same.

	* Compiler.cs: same.

	* CompilationConfiguration.cs: same.

2006-01-08  Konstantin Triger <kostat@mainsoft.com>

        * HttpCapabilitiesBase.cs: TARGET_JVM changes to let the compilation
                pass with csc 1.1.

2005-12-22 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* WebConfigurationSettings.cs: patch by Cyrille Colin that sets the
	right application path even when MapPath fails. Closes bug #77044.

2005-12-02 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* WebConfigurationSettings.cs: don't fail if <location> has more
	than one element. Fixes bug #76633.

2005-12-02 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpHandlersSectionHandler.cs:
	* HandlerFactoryConfiguration.cs: we need to use a copy of the parent
	mappings, otherwise we may remove mappings from the parent. Fix a typo
	when removing the item from the collection. Now LocateHandler searches
	first for this configuration mappings and then for the parent ones.
	Fixes (truly) bug #76842.
